[package]
name = "ntex-ratelimiter"
version = "0.1.1"
edition = "2021"
authors = ["lollipopkit <a@lpkt.cn>"]
description = "A rate limiter middleware for ntex web framework."
license = "MIT"
repository = "https://github.com/lollipopkit/ntex-ratelimiter"
readme = "README.md"
keywords = ["ntex", "rate-limiter", "middleware", "token-bucket"]
categories = ["web-programming", "network-programming"]

[features]
default = ["tokio", "json"]
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]
json = ["dep:serde", "dep:serde_json"]

[dependencies]
dashmap = "6"
ntex = "2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1", features = [
    "sync",
    "time",
    "rt",
    "macros",
], optional = true }
async-std = { version = "1", features = ["attributes"], optional = true }

[dev-dependencies]
