[package]
name = "ntex-ratelimiter"
version = "0.3.0"
edition = "2021"
authors = ["lollipopkit <a@lpkt.cn>"]
description = "A rate limiter middleware for ntex web framework."
license = "MIT"
repository = "https://github.com/lollipopkit/ntex-ratelimiter"
readme = "README.md"
keywords = ["ntex", "rate-limiter", "middleware", "token-bucket"]
categories = ["web-programming", "network-programming"]

[features]
default = ["tokio", "json"]
tokio = ["dep:tokio"]
smol = ["dep:smol"]
json = ["dep:serde", "dep:serde_json"]

[dependencies]
dashmap = "6"
itoa = "1"
ntex = "3"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1", features = [
    "sync",
    "time",
    "rt",
    "macros",
], optional = true }
smol = { version = "2", optional = true }

[dev-dependencies]
